--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "onlinebusservicesystem",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,9 +17,14 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7",
     "react-to-print": "^3.0.2",
     "stripe": "^17.3.1",
     "uuid": "^11.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
